--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
